--- a/game.html
+++ b/game.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div>
-                <a class="btn btn-warning">Reset Game</a>
+                <a class="btn reset-btn">Reset Game</a>
                 <a href="/" class="btn btn-danger">End Game</a>
             </div>
         </nav>
@@ -39,7 +39,11 @@
         <div class="card">
             <div class="card-face card-face--back"></div>
             <div class="card-face card-face--front">
-                <img src="./images/Bruce-Willis.webp" alt="">
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-face card-face--back"></div>
+            <div class="card-face card-face--front">
             </div>
         </div>
         <div class="card">
@@ -130,34 +134,6 @@
             <div class="card-face card-face--back"></div>
             <div class="card-face card-face--front"></div>
         </div>
-        <div class="card">
-            <div class="card-face card-face--back"></div>
-            <div class="card-face card-face--front"></div>
-        </div>
-        <!-- <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div> -->
     </main>
 </body>
 
