really really small changes (barley noticeable)

--- a/game.html
+++ b/game.html
@@ -1,4 +1,4 @@
-<html data-theme="dark" lang="en">
+<html data-theme="ash" lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -129,9 +129,11 @@
             <div class="card-face card-face--back"></div>
             <div class="card-face card-face--front"></div>
         </div>
-        <dialog open>
-            <p></p>
-            <h3 class="winner"></h3>
+        <dialog>
+            <h2>The winner is:</h2>
+            <h3 class="winner">winner.name</h3>
+            <p class="score">winner.score</p>
+            <p>Press reset game to play again</p>
         </dialog>
     </main>
 </body>
