--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html data-theme="dark" lang="en">
+<html data-theme="christmas" lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -13,15 +13,26 @@
     <header>
         <nav>
             <a class="nav-home" href="/">
-                <h2>Awesome Memory Game</h2>
+                <h1>Awesome Memory Game</h1>
             </a>
             <p>Made with ❤️ By: Dennis & Pontus</p>
         </nav>
     </header>
     <main class="menu-container">
-        <h1 class="menu-header">Menu</h1>
+        <h2 class="menu-header">Menu</h2>
         <a href="pvp.html" class="btn">Play With Others</a>
         <a href="/" class="btn">Play vs Computer</a>
+        <h2>Themes</h2>
+        <section class="theme-container">
+            <button type="button" title="Dusty Pink" class="theme dusty-pink"></button>
+            <button type="button" title="Christmas" class="theme christmas"></button>
+            <button type="button" title="Golden Era" class="theme golden-era"></button>
+            <button type="button" title="Mean Green" class="theme mean-green"></button>
+            <button type="button" title="Cool Red" class="theme cool-red"></button>
+            <button type="button" title="Ash" class="theme ash"></button>
+
+            <!-- <div class="display-card christmas-card--back"></div> -->
+        </section>
     </main>
 </body>
 
