--- a/pvp.html
+++ b/pvp.html
@@ -1,4 +1,4 @@
-<html data-theme="dark" lang="en">
+<html data-theme="dusty-pink" lang=" en">
 
 <head>
     <meta charset="UTF-8">
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <a class="nav-home" href="/">
-                <h2>Awesome Memory Game</h2>
+                <h1>Awesome Memory Game</h1>
             </a>
             <p>Made with ❤️ By: Dennis & Pontus</p>
         </nav>
