Users can now change themes

--- a/index.html
+++ b/index.html
@@ -1,39 +1,39 @@
-<html data-theme="christmas" lang="en">
+<html data-theme="ash" lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Memory Game - Start</title>
+        <link rel="icon" href="https://fav.farm/🔥" />
+        <link rel="stylesheet" href="reset.css" />
+        <link rel="stylesheet" href="style.css" />
+        <script src="app.js" defer></script>
+        <script src="getTheme.js"></script>
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memory Game - Start</title>
-    <link rel="icon" href="https://fav.farm/🔥" />
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
-</head>
+    <body>
+        <header>
+            <nav>
+                <a class="nav-home" href="/">
+                    <h1>Awesome Memory Game</h1>
+                </a>
+                <p>Made with ❤️ By: Dennis & Pontus</p>
+            </nav>
+        </header>
+        <main class="menu-container">
+            <h2 class="menu-header">Menu</h2>
+            <a href="pvp.html" class="btn">Play With Others</a>
+            <a href="/" class="btn">Play vs Computer</a>
+            <h2>Themes</h2>
+            <section class="theme-container">
+                <button data-theme="dusty-pink" type="button" title="Dusty Pink" class="theme dusty-pink"></button>
+                <button data-theme="christmas" type="button" title="Christmas" class="theme christmas"></button>
+                <button data-theme="golden-era" type="button" title="Golden Era" class="theme golden-era"></button>
+                <button data-theme="mean-green" type="button" title="Mean Green" class="theme mean-green"></button>
+                <button data-theme="cool-red" type="button" title="Cool Red" class="theme cool-red"></button>
+                <button data-theme="ash" type="button" title="Ash" class="theme ash"></button>
 
-<body>
-    <header>
-        <nav>
-            <a class="nav-home" href="/">
-                <h1>Awesome Memory Game</h1>
-            </a>
-            <p>Made with ❤️ By: Dennis & Pontus</p>
-        </nav>
-    </header>
-    <main class="menu-container">
-        <h2 class="menu-header">Menu</h2>
-        <a href="pvp.html" class="btn">Play With Others</a>
-        <a href="/" class="btn">Play vs Computer</a>
-        <h2>Themes</h2>
-        <section class="theme-container">
-            <button type="button" title="Dusty Pink" class="theme dusty-pink"></button>
-            <button type="button" title="Christmas" class="theme christmas"></button>
-            <button type="button" title="Golden Era" class="theme golden-era"></button>
-            <button type="button" title="Mean Green" class="theme mean-green"></button>
-            <button type="button" title="Cool Red" class="theme cool-red"></button>
-            <button type="button" title="Ash" class="theme ash"></button>
-
-            <!-- <div class="display-card christmas-card--back"></div> -->
-        </section>
-    </main>
-</body>
-
+                <div class="display-card christmas-card--back"></div>
+            </section>
+        </main>
+    </body>
 </html>
