--- a/pvp.html
+++ b/pvp.html
@@ -1,38 +1,37 @@
 <html data-theme="dusty-pink" lang=" en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Memory Game - PvP</title>
+        <link rel="icon" href="https://fav.farm/🔥" />
+        <link rel="stylesheet" href="reset.css" />
+        <link rel="stylesheet" href="style.css" />
+        <script src="pvp.js" defer></script>
+        <script src="getTheme.js"></script>
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memory Game - PvP</title>
-    <link rel="icon" href="https://fav.farm/🔥" />
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
-    <script src="pvp.js" defer></script>
-</head>
-
-<body>
-    <header>
-        <nav>
-            <a class="nav-home" href="/">
-                <h1>Awesome Memory Game</h1>
-            </a>
-            <p>Made with ❤️ By: Dennis & Pontus</p>
-        </nav>
-    </header>
-    <main class="menu-container">
-        <h1 class="menu-header">Player vs Player</h1>
-        <form action="game.html" class="pvp-form">
-            <div>
-                <label for="player-one">Enter Player1 Name</label>
-                <input type="text" name="player-one" id="player-one" placeholder="John McClane">
-            </div>
-            <div>
-                <label for="player-two">Enter Player2 Name</label>
-                <input type="text" name="player-two" id="player-two" placeholder="John Rambo">
-            </div>
-            <button type="submit" class="btn start-game">START GAME</button>
-        </form>
-    </main>
-</body>
-
+    <body>
+        <header>
+            <nav>
+                <a class="nav-home" href="/">
+                    <h1>Awesome Memory Game</h1>
+                </a>
+                <p>Made with ❤️ By: Dennis & Pontus</p>
+            </nav>
+        </header>
+        <main class="menu-container">
+            <h1 class="menu-header">Player vs Player</h1>
+            <form action="game.html" class="pvp-form">
+                <div>
+                    <label for="player-one">Enter Player1 Name</label>
+                    <input type="text" name="player-one" id="player-one" placeholder="John McClane" />
+                </div>
+                <div>
+                    <label for="player-two">Enter Player2 Name</label>
+                    <input type="text" name="player-two" id="player-two" placeholder="John Rambo" />
+                </div>
+                <button type="submit" class="btn start-game">START GAME</button>
+            </form>
+        </main>
+    </body>
 </html>
