--- a/pve.html
+++ b/pve.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="https://fav.farm/🔥" />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
-    <script src="pvp.js" defer></script>
+    <script src="pve.js" defer></script>
     <script src="theme.js"></script>
 </head>
 
@@ -21,15 +21,11 @@
         </nav>
     </header>
     <main class="menu-container">
-        <h1 class="menu-header">Player vs Player</h1>
+        <h1 class="menu-header">Player vs Computer</h1>
         <form action="game.html" class="pvp-form">
             <div>
-                <label for="player-one">Enter Player1 Name</label>
+                <label for="player-one">Enter Player Name</label>
                 <input type="text" name="player-one" id="player-one" placeholder="John McClane" />
-            </div>
-            <div>
-                <label for="player-two">Enter Player2 Name</label>
-                <input type="text" name="player-two" id="player-two" placeholder="John Rambo" />
             </div>
             <button type="submit" class="btn start-game">START GAME</button>
         </form>
