Sorted files in folders. Made computer smarter. added outline on card in game.

--- a/html/game.html
+++ b/html/game.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Memory Game - Game</title>
     <link rel="icon" href="https://fav.farm/🔥" />
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="style.css" />
-    <script src="game.js" defer></script>
-    <script src="theme.js"></script>
+    <link rel="stylesheet" href="../css/reset.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <script src="../js/game.js" defer></script>
+    <script src="../js/theme.js"></script>
 </head>
 
 <body>
