--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Memory Game - Start</title>
     <link rel="icon" href="https://fav.farm/🔥" />
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <script src="app.js" defer></script>
-    <script src="theme.js"></script>
+    <script src="./js/theme.js"></script>
 </head>
 
 <body>
@@ -22,8 +22,8 @@
     </header>
     <main class="menu-container">
         <h2 class="menu-header">Menu</h2>
-        <a href="pvp.html" class="btn">Play With Others</a>
-        <a href="pve.html" class="btn">Play vs Computer</a>
+        <a href="/html/pvp.html" class="btn">Play With Others</a>
+        <a href="/html/pve.html" class="btn">Play vs Computer</a>
         <h2>Themes</h2>
         <section class="theme-container">
             <button data-theme="dusty-pink" type="button" title="Dusty Pink" class="theme dusty-pink"></button>
