--- a/html/pve.html
+++ b/html/pve.html
@@ -1,35 +1,32 @@
 <html data-theme="dusty-pink" lang=" en">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Memory Game - PvP</title>
-    <link rel="icon" href="https://fav.farm/🔥" />
-    <link rel="stylesheet" href="../css/reset.css" />
-    <link rel="stylesheet" href="../css/style.css" />
-    <script src="../js/pve.js" defer></script>
-    <script src="../js/theme.js"></script>
-</head>
-
-<body>
-    <header>
-        <nav>
-            <a class="nav-home" href="/">
-                <h1>Awesome Memory Game</h1>
-            </a>
-            <p>Made with ❤️ By: Dennis & Pontus</p>
-        </nav>
-    </header>
-    <main class="menu-container">
-        <h1 class="menu-header">Player vs Computer</h1>
-        <form action="/html/game.html" class="pvp-form">
-            <div>
-                <label for="player-one">Enter Player Name</label>
-                <input type="text" name="player-one" id="player-one" placeholder="John McClane" />
-            </div>
-            <button type="submit" class="btn start-game">START GAME</button>
-        </form>
-    </main>
-</body>
-
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Memory Game - PvE</title>
+        <link rel="icon" href="https://fav.farm/🔥" />
+        <link rel="stylesheet" href="../css/reset.css" />
+        <link rel="stylesheet" href="../css/style.css" />
+        <script src="../js/pve.js" defer></script>
+        <script src="../js/theme.js"></script>
+    </head>
+    <body>
+        <header>
+            <nav>
+                <a class="nav-home" href="/">
+                    <h1>Awesome Memory Game</h1>
+                </a>
+                <p>Made with ❤️ By: Dennis & Pontus</p>
+            </nav>
+        </header>
+        <main class="menu-container">
+            <h1 class="menu-header">Player vs Computer</h1>
+            <form action="/html/game.html" class="pvp-form">
+                <div>
+                    <label for="player-one">Enter Player Name</label>
+                    <input type="text" name="player-one" id="player-one" placeholder="John McClane" />
+                </div>
+                <button type="submit" class="btn start-game">START GAME</button>
+            </form>
+        </main>
+    </body>
 </html>
