--- a/html/game.html
+++ b/html/game.html
@@ -25,7 +25,7 @@
                 </div>
                 <div>
                     <a class="btn reset-btn">Reset Game</a>
-                    <a href="/" class="btn btn-danger">End Game</a>
+                    <a href="/Memory-Game" class="btn btn-danger">End Game</a>
                 </div>
             </nav>
         </header>
