--- a/html/pvp.html
+++ b/html/pvp.html
@@ -20,7 +20,7 @@
         </header>
         <main class="menu-container">
             <h1 class="menu-header">Player vs Player</h1>
-            <form action="/html/game.html" class="pvp-form">
+            <form action="/Memory-Game/html/game.html" class="pvp-form">
                 <div>
                     <label for="player-one">Enter Player1 Name</label>
                     <input type="text" name="player-one" id="player-one" placeholder="John McClane" />
