--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     </header>
     <main class="menu-container">
         <h2 class="menu-header">Menu</h2>
-        <a href="/html/pvp.html" class="btn">Play With Others</a>
-        <a href="/html/pve.html" class="btn">Play vs Computer</a>
+        <a href="/Memory-Game/html/pvp.html" class="btn">Play With Others</a>
+        <a href="/Memory-Game/html/pve.html" class="btn">Play vs Computer</a>
         <h2>Themes</h2>
         <section class="theme-container">
             <button data-theme="dusty-pink" type="button" title="Dusty Pink" class="theme dusty-pink"></button>
